toList() static method used instead of Colletors(collector.toList() accroding to SonarLint